<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.banew</groupId>
	<packaging>pom</packaging>
	<artifactId>cw2025_backend</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>cw2025_backend</name>
	<description>
		API for the course work 2025: Creating a
		cross-platform application for planning
		learning tasks and events
	</description>

	<modules>
		<module>cw2025_backend_common</module>
		<module>cw2025_backend_core</module>
	</modules>

	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>

	<properties>
		<java.version>21</java.version>
	</properties>
</project>
